--- a/02_LangGraph/01_LG_LambdaChatBot.ipynb
+++ b/02_LangGraph/01_LG_LambdaChatBot.ipynb
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "id": "92911f14",
       "metadata": {
         "id": "92911f14"
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "id": "82502c06",
       "metadata": {
         "id": "82502c06"
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "id": "2696717e",
       "metadata": {
         "id": "2696717e"
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "id": "14a86ccb",
       "metadata": {
         "id": "14a86ccb"
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "1da58faa",
       "metadata": {
         "id": "1da58faa"
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "id": "d5e832a7",
       "metadata": {
         "id": "d5e832a7"
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "id": "c07fcd13",
       "metadata": {
         "colab": {
@@ -319,10 +319,10 @@
         {
           "data": {
             "text/plain": [
-              "<langgraph.graph.state.StateGraph at 0x132b40310>"
+              "<langgraph.graph.state.StateGraph at 0x12d56d5d0>"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "id": "e18363b1",
       "metadata": {
         "colab": {
@@ -376,10 +376,10 @@
         {
           "data": {
             "text/plain": [
-              "<langgraph.graph.state.StateGraph at 0x132b40310>"
+              "<langgraph.graph.state.StateGraph at 0x12d56d5d0>"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 12,
       "id": "e4aa1cbe",
       "metadata": {
         "colab": {
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "10d81d82",
       "metadata": {
         "colab": {
@@ -518,14 +518,18 @@
             "Assistant: \n",
             "[INFO] Tool Invoked: fix_failure_steps\n",
             "Assistant: {\"failure_code\": \"FAIL-503\", \"steps\": [\"Restart backend services\", \"Verify load balancer configuration\", \"Check database availability\"]}\n",
-            "Assistant: For ticket ID **TICKET12345**, the failure was identified with the code **FAIL-503**, which is an \"Application Failure\" due to a \"503 Service Unavailable\" error caused by backend overload.\n",
+            "Assistant: Here are the details and resolution steps for the failure associated with ticket ID TICKET12345:\n",
+            "\n",
+            "- **Failure Code**: FAIL-503\n",
+            "- **Category**: Application Failure\n",
+            "- **Message**: 503 Service Unavailable due to backend overload\n",
             "\n",
             "### Resolution Steps:\n",
             "1. Restart backend services.\n",
             "2. Verify load balancer configuration.\n",
             "3. Check database availability.\n",
             "\n",
-            "Following these steps should help in resolving the issue associated with this ticket.\n",
+            "These steps should help in resolving the issue. If further assistance is needed, please consult with your technical team.\n",
             "Assistant: \n",
             "[INFO] Tool Invoked: get_ticket_details\n",
             "Assistant: {\"ticket_id\": \"TICKET12345\", \"description\": \"Application crash observed in production\", \"failure_code\": \"FAIL-503\"}\n",
@@ -534,27 +538,22 @@
             "Assistant: {\"failure_code\": \"FAIL-503\", \"category\": \"Application Failure\", \"message\": \"503 Service Unavailable due to backend overload\"}\n",
             "Assistant: \n",
             "[INFO] Tool Invoked: search_failure_bedrock\n",
-            "Assistant: {\"statusCode\": 200, \"explanation\": \" I'm sorry for any confusion, but it seems like there's a placeholder {} in your message where the details of the failure should be. To provide a helpful explanation, I'll need more specific information about the failure or issue you're experiencing. This could include error messages, symptoms, or the context in which the problem occurred. Once I have these details, I'll do my best to provide a clear and useful explanation.\"}\n",
-            "Assistant: Here is a detailed breakdown of the situation regarding ticket ID TICKET12345:\n",
+            "Assistant: {\"statusCode\": 200, \"explanation\": \" I'm sorry for any confusion, but it seems like there's a placeholder {} in your message where the details of the failure should be. To provide a helpful explanation, I'll need more specific information about the failure or issue you're experiencing. This could include error messages, symptoms, or the context in which the problem occurred. Please provide more details so I can assist you better.\"}\n",
+            "Assistant: Here are the detailed insights for the failure tied to ticket ID **TICKET12345**:\n",
             "\n",
-            "### Ticket Details:\n",
             "- **Description**: Application crash observed in production.\n",
             "- **Failure Code**: FAIL-503\n",
-            "\n",
-            "### Failure Details:\n",
             "- **Category**: Application Failure\n",
-            "- **Message**: 503 Service Unavailable due to backend overload\n",
+            "- **Message**: 503 Service Unavailable due to backend overload.\n",
             "\n",
-            "### Explanation of Failure:\n",
-            "The 503 Service Unavailable error typically occurs when the server is temporarily unable to handle requests due to being overloaded or down for maintenance. This means that the backend server is receiving more requests than it can process or is taking longer to respond, leading to a temporary unavailability for users or services trying to access it.\n",
+            "### Detailed Explanation:\n",
+            "The failure code **FAIL-503** indicates an application failure characterized by a \"503 Service Unavailable\" error. This typically occurs when the server is temporarily unable to handle the request due to temporary overload or maintenance of the server. It’s a server-side error, implying that the issue likely arises from the application’s backend infrastructure and could be related to high traffic or insufficient resource allocation.\n",
             "\n",
-            "### GenAI Explanation:\n",
-            "The GenAI was expected to provide further insights but returned a placeholder message. In absence of additional information, we can summarize that the 503 error indicates a significant stress or bottleneck on the backend resources, necessitating scalability or performance optimizations to handle the current load effectively. \n",
+            "Unfortunately, the GenAI-powered Bedrock search didn't provide additional useful insights due to insufficient specific details; however, this summary provides a comprehensive understanding of the problem based on available data.\n",
             "\n",
-            "Would you like further steps on resolving this issue?\n",
-            "Assistant: Hello! How can I assist you today?\n",
-            "Assistant: Hello! How can I assist you today?\n",
-            "Assistant: Hello! How can I assist you today?\n"
+            "If you need further assistance or step-by-step resolution guidance, feel free to ask!\n",
+            "User: Hello\n",
+            "Assistant: Hi there! How can I assist you today?\n"
           ]
         }
       ],
@@ -574,7 +573,7 @@
         "            break\n",
         "        stream_graph_updates(user_input)\n",
         "    except:\n",
-        "        user_input = \"Fetch the details for ticket ID TICKET12345, extract the failure code, use it to retrieve the failure details, and then obtain the appropriate fix or resolution steps for the identified failure.\"\n",
+        "        user_input = \"Hello\"\n",
         "        print(\"User:\", user_input)\n",
         "        stream_graph_updates(user_input)\n",
         "        break"
